More basics, woosh, and link to main site from admin

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1,1 +1,16 @@
 @import reset
+@import url(//fonts.googleapis.com/css?family=Lato)
+
+$color_brand_main: #d91b5c
+$color_brand_secondary: #109df0
+
+$font_body: Verdana, Arial, Helvetica, sans-serif
+$font_headings: 'Lato', 'Lucida Sans', 'Lucida Grande', sans-serif
+$font_size: 14px
+
+body
+	font-family: $font_body
+	font-size: $font_size
+
+h1, h2, h3, h4, h5, h6
+	font-family: $font_headings
