--- a/blender-today/application/templates/admin/layout_admin.html
+++ b/blender-today/application/templates/admin/layout_admin.html
@@ -1,5 +1,9 @@
 {% extends 'admin/base.html' %}
 
+{% block brand %}
+    <span class="brand"><a href="{{url_for('index')}}">{{ admin_view.admin.name }}</a></span>
+{% endblock %}
+
 {% block access_control %}
 {% if current_user.is_authenticated() %}
 <div class="btn-group pull-right">
