--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -16,6 +16,9 @@
         {{ form.category_id(class='form-control') }}
     </div>
     <div class="form-group">
+        {{ form.post_type_id(class='form-control') }}
+    </div>
+    <div class="form-group">
         {{ form.content(class='form-control', id='post_content') }}
     </div>
     <button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
