--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -3,7 +3,7 @@
 <h1>All posts</h1>
 
 <div class="row post-index">
-	<div class="col-md-8">
+	<div class="col-md-9">
 		{% for post in posts %}
 		<div class="row post-item">
 			<div class="col-md-1">
@@ -15,8 +15,17 @@
 				<a class="post-item-title" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
 					{{post.title}}
 				</a>
-				<div class="post-item-meta" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-					Submitted {{post.pretty_creation_date}} by {{post.user.first_name}} {{post.user.last_name}}
+				<div class="post-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
+					<a class="post-item-rate up" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}">
+						<i class="fa fa-arrow-up"></i>
+					</a>
+					<a class="post-item-rate down" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}">
+						<i class="fa fa-arrow-down"></i>
+					</a>
+					{{post.comments|length}} comments
+					-
+					<i class="fa fa-clock-o"></i> {{post.pretty_creation_date}}
+					<small>by</small> {{post.user.first_name}} {{post.user.last_name}}
 				</div>
 			</div>
 		</div>
