--- a/blender-today/application/static/sass/_helpers.sass
+++ b/blender-today/application/static/sass/_helpers.sass
@@ -85,3 +85,12 @@ $screen-md-max: $screen-lg-min - 1
 =pointer-events-none
 	-ms-pointer-events: none !important
 	pointer-events: none !important
+
+.vertical-align
+	position: relative
+	top: 50%
+	-webkit-transform: translateY(-50%)
+	-moz-transform: translateY(-50%)
+	-ms-transform: translateY(-50%)
+	-o-transform: translateY(-50%)
+	transform: translateY(-50%)
