--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -1,41 +1,45 @@
 {% extends 'layout.html' %}
+{% block page_title %}Submit{% endblock %}
+
 {% block body %}
-
-<form role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
-    {{ form.hidden_tag() }}
-    <div class="form-group">
-        {#{{ form.title.label }}#}
-        {{ form.title(class='form-control', placeholder='Title') }}
-        {% if form.title.errors %}
-            <ul class="error">
-                {% for error in form.title.errors %}<li>{{ error }}</li>{% endfor %}
-            </ul>
-        {% endif %}
-    </div>
-    <div class="form-group">
-        {{ form.category_id(class='form-control') }}
-    </div>
-    <div class="form-group">
-        {{ form.post_type_id(class='form-control') }}
-    </div>
-    <div class="form-group">
-        {{ form.content(class='form-control', id='post_content') }}
-    </div>
-    <button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
-        <i class="fa fa-check"></i> Submit </button>
-</form>
-
+<div class="col-md-9">
+	<form role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
+		{{ form.hidden_tag() }}
+		<div class="form-group">
+			{#{{ form.title.label }}#}
+			{{ form.title(class='form-control', placeholder='Title') }}
+			{% if form.title.errors %}
+				<ul class="error">
+					{% for error in form.title.errors %}<li>{{ error }}</li>{% endfor %}
+				</ul>
+			{% endif %}
+		</div>
+		<div class="form-group">
+			{{ form.post_type_id.label() }}
+			{{ form.post_type_id(class='form-control') }}
+		</div>
+		<div class="form-group">
+			{{ form.category_id.label() }}
+			{{ form.category_id(class='form-control') }}
+		</div>
+		<div class="form-group">
+			{{ form.content(class='form-control', id='post_content') }}
+		</div>
+		<button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
+			<i class="fa fa-check"></i> Submit </button>
+	</form>
+</div>
 {% endblock %}
 
 {% block footer_scripts %}
-    <script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
-    <script type="text/javascript">
+	<script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
+	<script type="text/javascript">
 
-    CKEDITOR.replace( 'post_content', {
-        removePlugins: 'elementspath',
-        resize_enabled: false
-    });
+	CKEDITOR.replace( 'post_content', {
+		removePlugins: 'elementspath',
+		resize_enabled: false
+	});
 
-    CKEDITOR.config.forcePasteAsPlainText = true;
-    </script>
+	CKEDITOR.config.forcePasteAsPlainText = true;
+	</script>
 {% endblock %}
