--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -11,8 +11,10 @@
     {% if config.USE_ASSETS_CDN %}
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='//fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     {% else %}
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
     {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
@@ -117,17 +119,18 @@
     {% endif %}
   {% block footer_scripts %}{% endblock %}
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  {# 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', '{{config.GOOGLE_ANALYTICS_DOMAIN}}');
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');
-  </script>
-
+      ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', '{{config.GOOGLE_ANALYTICS_DOMAIN}}');
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
+  #}
   </body>
 </html>
 
