--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -33,6 +33,8 @@
 
 {% block footer_scripts %}
 	<script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
+	<link href="{{ url_for('static', filename='js/ckeditor.js') }}" rel="stylesheet">
+	{% endif %}
 	<script type="text/javascript">
 
 	CKEDITOR.replace( 'post_content', {
