--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -8,7 +8,7 @@ $color_text: #444
 $color_upvote: crimson
 $color_downvote: teal
 
-$font_body: Verdana, Arial, Helvetica, sans-serif
+$font_body: 'Open Sans', Verdana, Arial, Helvetica, sans-serif
 $font_headings: 'Lato', 'Lucida Sans', 'Lucida Grande', sans-serif
 $font_size: 14px
 
