--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -26,6 +26,9 @@
 		<div class="form-group">
 			{{ form.content(class='form-control', id='post_content') }}
 		</div>
+		<div class="form-group">
+			{{ form.picture(class='form-control') }}
+		</div>
 		<button type="submit" class="btn btn-default btn-block btn-squishy btn-success submit" value="Go">
 			<i class="fa fa-check"></i> Submit </button>
 	</form>
