Posts Index: Make type clickable

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -5,8 +5,8 @@ $color_brand_secondary: #109df0
 $color_background: #f0f0f0
 $color_text: #444
 
-$color_upvote: crimson
-$color_downvote: teal
+$color_upvote: #ff8b60
+$color_downvote: #74a4ff
 
 $font_body: 'Open Sans', Verdana, Arial, Helvetica, sans-serif
 $font_headings: 'Lato', 'Lucida Sans', 'Lucida Grande', sans-serif
