Post View: Image classes

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6
 	height: 50px
 	margin: 15px 0 0 5px
 	color: white
-	background-color: lighten(desaturate($color_brand_secondary, 30%), 30%)
+	background-color: lighten($color_text, 50%)
 	text-align: center
 	position: relative
 	+border-radius(50%)
@@ -95,9 +95,13 @@ h1, h2, h3, h4, h5, h6
 	font-size: 1.1em
 	padding: 5px 15px 10px 15px
 
+.post-view-content-image
+	padding: 5px 15px 10px 15px
+
 .post-view-details
 	display: block
-	padding: 3px 0 15px 15px
+	font-size: 1.1em
+	padding: 15px 0 15px 15px
 	color: lighten($color_text, 10%)
 
 .post-view-rate
